--- a/asset/css/question2.css
+++ b/asset/css/question2.css
@@ -1,5 +1,47 @@
-td {
-    border: 1px solid black;
-    height: 50px;
-    width: 50px;
-    }
+table{
+
+    margin: 100px 400px;
+}
+
+td{
+    
+    height: 200px;
+    width: 200px;
+   padding: 0px;
+}
+
+.First{
+
+    border-left: 3px solid black;
+    border-right: 3px solid black;
+    
+}
+
+.Second{
+
+    border-top: 3px solid black;
+    border-bottom: 3px solid black;
+
+}
+
+.Third{
+
+    border-top: 3px solid black;
+    border-right: 3px solid black;
+    border-bottom: 3px solid black;
+    border-left: 3px solid black;
+}
+
+.Fourth{
+
+    border-top: 3px solid black;
+    border-bottom: 3px solid black;
+
+}
+
+.Fifth{
+
+    
+    border-right: 3px solid black;
+    border-left: 3px solid black;
+}
