I have corected question 3 which was done wrongfully and also fixed the folder structure

--- a/asset/css/Style.css
+++ b/asset/css/Style.css
@@ -5,6 +5,19 @@ body{
     margin: 10px auto;
    
 }
+
+.index{
+
+    background-color: white;
+}
+.Header{
+
+    float: left;
+}
+
+#Logo{
+    float: right;
+}
 header{
 
     background-color: rgba(12,23,11,0.3);
