--- a/asset/css/Style.css
+++ b/asset/css/Style.css
@@ -1,6 +1,5 @@
 /* Common */
 
-@media screen and (min-width: 480px) 
 
 body{
 
@@ -146,10 +145,20 @@ nav > ul > li > a{
     
 /* Blog */
 
+#container{
+
+    display: flex;
+    border-bottom: 2px solid black;
+    margin: 100px;
+    
+}
+
 section{
+    
     font-family: Arial, Helvetica, sans-serif;
     padding: 5px 30px;
     margin-top: 70px;
+
 
 } 
 
@@ -162,12 +171,6 @@ article{
 .title{
     font-size: 23px;
     font-weight: bold;
-}
-
-.date{
-    font-size: 15px;
-    font-style: italic;
-    text-transform: uppercase;
 }
 
 /* Contact */
