--- a/asset/css/Style.css
+++ b/asset/css/Style.css
@@ -28,7 +28,7 @@ header{
       color: black;
     }
   }
-  
+
 nav > ul > li{
 
     display: inline-block;
@@ -154,11 +154,24 @@ nav > ul > li > a{
     
 /* Blog */
 
+#blogheader{
+
+    position: relative;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2em;
+    margin-top: 10%;
+    margin-right: 100px;
+    margin-left: 100px;
+    border-bottom: 2px solid black;
+}
+
+
 #container{
 
     display: flex;
     border-bottom: 2px solid black;
-    margin: 100px;
+    margin: 50px;
     
 }
 
